fix horizontal overflow in embedded mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -143,6 +143,7 @@
 
 .vkui__root--embedded {
   transform: translate3d(0, 0, 0);
+  overflow-x: hidden;
 }
 
 .AppRoot {
